removed relative positioning to solve width issue. Improved code readability

--- a/styles.css
+++ b/styles.css
@@ -11,107 +11,92 @@
 
 
 body {
+    min-width: fit-content;
+    max-width: 100vw;
+
     background-color: #191880;
 }
 
 
 /* These are for the navigation */
 
-.navbar {
-    background-color: #84A2BE;
-    justify-content: left;
-    padding-right: 1rem;
-    padding-left: 0.5rem;
-}
-
-.navbar-toggler {
-    margin-right: 25%;
-}
-.logo {
-    flex-grow: 1;
-    flex-basis: 0;
-    justify-self: right;
-    max-height: 110px;
-}
-.logoImage {
-    width: 150px;
-}
-
-.logoName {
-    font-family: 'lucida_handwritingitalic';
-    font-size: 16px;
-    white-space: nowrap;
-    color: #191880;
-
-    position: relative;
-    display: block;
-    font-size: 16px;
-    bottom: 30px;
-    white-space: nowrap;
-    left: 50px; 
-}
-
-.navbar-nav {
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    flex-grow: 1;
-}
-
-.nav-item {
-    white-space: nowrap;
-
-    padding: 2rem;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 24px;
-    color: white;
-}
-
-.callnow {
-    white-space: nowrap;
-
-    font-family: sans-serif;
-    background-color: red;
-    border-radius: 50px;
-    padding-right: 4rem;
-    padding-left: 4rem;
-    padding-top: 1rem;
-
-    border: none;
-}
-
-.btn:hover {
-    background-color: rgb(184, 0, 0);
-}
-.nav-item:hover {
-    background-color: #94B1CC;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-a:hover {
-    color: inherit;
-}
-
-.navbar-toggler {
-    color: #191880;
-}
-
-@media screen and (min-width: 992px) {
-
-    .navbar {
-        justify-content: space-around;
+    .navbar {  
+        background-color: #84A2BE;
+        padding-right: 1rem;
+        padding-left: 0.5rem;
     }
+
+    .logo {
+        /* Here we will build the logo container */
+        display: flex;
+        flex-basis: 0;
+        min-height: 90px;
+        min-width: 175px;
+        justify-content: right;
+        background-image: url("logo.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
 
     .logoName {
-    position: relative;
-    display: block;
-    font-size: 16px;
-    bottom: 30px;
-    white-space: nowrap;
-    left: 50px; 
+        /* This is the logo text */
+        font-family: 'lucida_handwritingitalic';
+        font-size: 16px;
+        white-space: nowrap; /* Keeps everything in one line */
+        color: #191880;
+
+        flex-direction: row;
+        align-self: flex-end;
     }
-}
+
+    .navbar-nav {
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        flex-grow: 1;
+    }
+
+    .nav-item {
+        white-space: nowrap;
+
+        padding: 2rem;
+        font-family: 'Noto Sans', sans-serif;
+        font-size: 24px;
+        color: white;
+    }
+
+    .callnow {
+        white-space: nowrap;
+
+        font-family: sans-serif;
+        background-color: red;
+        border-radius: 50px;
+        padding-right: 4rem;
+        padding-left: 4rem;
+        padding-top: 1rem;
+
+        border: none;
+    }
+
+    .btn:hover {
+        background-color: rgb(184, 0, 0);
+    }
+    .nav-item:hover {
+        background-color: #94B1CC;
+    }
+
+    /* These 'a' related statements mostly remove the gross default link formatting */
+
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
+
+    a:hover {
+        color: inherit;
+    }
+
+    .navbar-toggler {
+        color: #191880;
+    }
